# wgc-cli

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  SKILL.md  Tasks.md
src/: capture_wgc.cpp  capture_wgc.h  cli_args.cpp  cli_args.h  client.cpp  client.h  d3d_helpers.cpp  d3d_helpers.h  diagnose.cpp  diagnose.h  image_wic.cpp  image_wic.h  main.cpp  mcp_server.cpp  mcp_server.h  output.cpp  output.h  server.cpp  server.h  window_enum.cpp  window_enum.h
